# cornucopia

./: README
fsoaudiod/: ChangeLog  configure.ac
fsoaudiod/src/lib/: Makefile.am  alsa.vala  fsoaudio-2.0.deps
fsoaudiod/src/plugins/: Makefile.am
fsoaudiod/src/plugins/gsmvoice_alsa_cmtspeechdata/: Makefile.am  cmthandler.vala  plugin.vala
fsoaudiod/src/plugins/gsmvoice_alsa_forwarder/: Makefile.am  plugin.vala
fsoaudiod/src/plugins/manager/: Makefile.am  plugin.vala
fsoaudiod/src/plugins/router_aci/: plugin.vala
fsoaudiod/src/plugins/router_alsa/: Makefile.am
fsoaudiod/src/plugins/sessionpolicy_default/: Makefile.am
fsoaudiod/src/plugins/streamcontrol_alsa/: Makefile.am
fsoaudiod/src/plugins/system_integration/: Makefile.am
fsodatad/: ChangeLog  Makefile.am  configure.ac
fsodatad/src/lib/: Makefile.am
fsodatad/src/plugins/world/: Makefile.am
fsodatad/tests/: Makefile.am
fsodeviced/: ChangeLog  configure.ac
fsodeviced/conf/GTA04/: fsodeviced.conf
fsodeviced/conf/htcleo/: Makefile.am
fsodeviced/src/lib/: Makefile.am  fsodevice-2.0.deps
fsodeviced/src/plugins/accelerometer_bma180/: Makefile.am
fsodeviced/src/plugins/accelerometer_kxsd9/: Makefile.am
fsodeviced/src/plugins/accelerometer_lis302/: Makefile.am
fsodeviced/src/plugins/audio/: Makefile.am  plugin.vala
fsodeviced/src/plugins/dummy_input/: Makefile.am
fsodeviced/src/plugins/gpio_input/: Makefile.am
fsodeviced/src/plugins/gta04_quirks/: Makefile.am  plugin.vala  router_alsa.vala
fsodeviced/src/plugins/herring_quirks/: Makefile.am
fsodeviced/src/plugins/kernel26_firmwareloader/: Makefile.am
fsodeviced/src/plugins/kernel26_powersupply/: plugin.vala
fsodeviced/src/plugins/kernel_idle/: Makefile.am
fsodeviced/src/plugins/kernel_input/: Makefile.am
fsodeviced/src/plugins/n900_quirks/: Makefile.am
fsodeviced/src/plugins/openmoko_powercontrol/: Makefile.am
fsodeviced/src/plugins/player_alsa/: Makefile.am
fsodeviced/src/plugins/player_canberra/: Makefile.am
fsodeviced/src/plugins/player_gstreamer/: Makefile.am
fsodeviced/src/plugins/router_alsa/: Makefile.am
fsodeviced/src/plugins/thinkpad_powercontrol/: Makefile.am
fsogsmd/: ChangeLog  Makefile.am  configure.ac
fsogsmd/conf/: Makefile.am
fsogsmd/conf/herring/: fsogsmd.conf
fsogsmd/conf/hfp_hf/: Makefile.am  fsogsmd.conf
fsogsmd/conf/tuna/: Makefile.am
fsogsmd/src/connman/: Makefile.am  modemhandler.vala  plugin.vala
fsogsmd/src/lib/: Makefile.am  bluetooth.vala  consts.vala  factories.vala  mediator.vala  mediatorhelpers.vala  modem.vala  modemmanager.vala  serviceprovider.vala  sms.vala  smsstorage.vala  watchdog.vala
fsogsmd/src/lib/at/: atcalldriver.vala  atchannel.vala  atcommand.vala  atcommandqueue.vala  atsms.vala  (+6 more)
fsogsmd/src/plugins/: Makefile.am
fsogsmd/src/ppp/: Makefile.am
fsogsmd/tests/: Makefile.am  testatcommand.vala  testatparser.vala  testoptiongtm601.vala  testsmsstorage.vala
fsogsmd/tests/integration/: Makefile.am
fsogsmd/vapi/: connman.vapi
fsonetworkd/: ChangeLog  configure.ac
fsosystemd/: ChangeLog  configure.ac
fsotdld/: ChangeLog  MAINTAINERS  Makefile.am  configure.ac
fsotdld/src/lib/: Makefile.am  gpschannel.vala
fsotdld/tests/: Makefile.am
fsousaged/: AUTHORS  ChangeLog  Makefile.am  configure.ac
fsousaged/tests/integration/: Makefile.am
libfsobasics/: ChangeLog  configure.ac
libfsoframework/: ChangeLog  configure.ac
libfsoframework/fsoframework/: Makefile.am  interfaces.vala
libfsoframework/fsosystem/: Makefile.am  network.vala
libfsoframework/fsotest/: Makefile.am
libfsoframework/fsotransport/: Makefile.am  basetransport.vala  fsotransport-2.0.deps  fsotransport-2.0.pc.in
libfsoframework/tests/fsosystem/: Makefile.am
libfsoframework/tests/fsotransport/: Makefile.am
libfsoresource/: ChangeLog  configure.ac
libfsosystem/: ChangeLog  configure.ac
libfsotransport/: ChangeLog  configure.ac
libfsotransport/fsotransport/: Makefile.am  basetransport.vala  commandqueue.vala  parser.vala  unix.vala
libgsm0710mux/: ChangeLog  configure.ac
misc/: Makefile.am  configure.ac
misc/vapi/: posixextra.vapi
prototypes/fsoeventsd/: configure.ac
prototypes/fsoeventsd/tests/: Makefile.am
prototypes/fsophoned/: configure.ac
prototypes/fsophoned/tests/: Makefile.am
prototypes/fsopreferencesd/: configure.ac
scripts/: update-changelogs.sh
tools/fso-alsa/: configure.ac
tools/mterm2/: configure.ac
tools/mterm2/src/: reader.vala  terminal.vala
tools/mterm2/vapi/: config.vapi
(+104 files in other folders)
